--- a/paintings.html
+++ b/paintings.html
@@ -1618,7 +1618,7 @@ span.onclick = function() {
 }
 </script>
 
-   <img id="myImg10" src="Scenary.jpg" alt="Rural Senary<br>Please continue looking at my other arts and craft" style="width:100%;max-width:220px">
+   <img id="myImg10" src="Scenary.jpg" alt="Rural Scenary<br>Please continue looking at my other arts and craft" style="width:100%;max-width:220px">
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
