--- a/index.html
+++ b/index.html
@@ -200,6 +200,41 @@ Pin Code: 678005</p>
 </li>
 </ul>
  <h2 style="background-color:Cyan;">My Family</h2>
+  <p><i>* Click the picture to enlarge the picture, then click the X button beside it to shorten the picture.</i></p>
+  </td></tr></table>
+  <br>
+  <img id="myImgA" src="Me and my family.jpg" alt="Me and My Family" style="width:100%;max-width:600px">
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="img01">
+  <div id="caption"></div>
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById("myImgA");
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+  modal.style.display = "block";
+  modalImg.src = this.src;
+  captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() { 
+  modal.style.display = "none";
+}
+</script>
+
 <ul>
   <table class="imgtable"><tr><td>
 <img src="Me and my family.jpg" alt="alt text" width="600px" height="300px" />&nbsp;</tr>
