--- a/index.html
+++ b/index.html
@@ -203,7 +203,14 @@ Pin Code: 678005</p>
   <p><i>* Click the picture to enlarge the picture, then click the X button beside it to shorten the picture.</i></p>
  
   <br>
-  <img id="myImgA" src="Me and my family.jpg" alt="Me and My Family" style="width:100%;max-width:600px">
+  <img id="myImgA" src="Me and my family.jpg" alt="Me and My Family<br><br>
+    The first person to the left is my mother. Her name is Sahely Bhadra<br>
+
+The second person to the left is myself. My name is Arinjay Dasbhadra<br>
+
+The first person to the right is my father. His name is Mrinal Kanti Das<br>
+
+The second person to the right is my younger sister. Her name is Arinya Dasbhadra" style="width:100%;max-width:600px">
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
