--- a/index.html
+++ b/index.html
@@ -113,6 +113,36 @@
 }
 </style>
 
+  <style>
+body {
+  margin: 0;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+</style>
+
 </head>
 <body style="background-color:powderblue;">
 <div id="fwtitle">
@@ -122,12 +152,12 @@
 </div>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
-<td id="layout-menu">
-<div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="paintings.html">Art and Craft</a></div>
-<div class="menu-item"><a href="stories.html">Stories</a></div>
-<div class="menu-item"><a href="codings.html">Codings</a></div>
-</td>
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
 <td id="layout-content">
 <table class="imgtable"><tr><td>
 <img src="Babuiscool.jpg" alt="alt text" width="300px" height="300px" />&nbsp;</td>
