--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@ body {
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a class="active" href="index.html">Home</a>
+  <a href="paintings.html">Arts and Crafts</a>
+  <a href="stories.html">Stories</a>
+  <a href="codings.html">Codings</a>
 </div>
 <td id="layout-content">
 <table class="imgtable"><tr><td>
