--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: blue;
 }
 
 .topnav a {
@@ -138,7 +138,7 @@ body {
 }
 
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: red;
   color: white;
 }
 </style>
