--- a/stories.html
+++ b/stories.html
@@ -3,6 +3,37 @@
 <html>
 <head>
 <title>Stories</title>
+
+  <style>
+body {
+  margin: 0;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: blue;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: red;
+  color: white;
+}
+</style>
+
 </head>
 <body style="background-color:tomato;">
 <div id="fwtitle">
