--- a/stories.html
+++ b/stories.html
@@ -42,12 +42,12 @@ body {
 </div>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
-<td id="layout-menu">
-<div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="paintings.html">Art and Craft</a></div>
-<div class="menu-item"><a href="stories.html" class="current">Stories</a></div>
-<div class="menu-item"><a href="codings.html">Codings</a></div>  
-</td>
+<div class="topnav">
+  <a href="index.html">Home</a>
+  <a href="paintings.html">Arts and Crafts</a>
+  <a class="active" href="stories.html">Stories</a>
+  <a href="codings.html">Codings</a>
+</div>
   
 <td id="layout-content">
 <table class="imgtable"><tr><td>
