--- a/stories.html
+++ b/stories.html
@@ -55,7 +55,7 @@ body {
 <td align="left">
 <p><br />
   
-<p style="font-size:50px;">Stories Written By Me</p>
+<p style="font-size:50px;">Stories Written by Me</p>
 <br/></p>
   
   
