--- a/stories.html
+++ b/stories.html
@@ -11,7 +11,7 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: blue;
+  background-color: #5c2300;
 }
 
 .topnav a {
@@ -29,7 +29,7 @@ body {
 }
 
 .topnav a.active {
-  background-color: red;
+  background-color: #fa07b1;
   color: white;
 }
 </style>
