--- a/paintings.html
+++ b/paintings.html
@@ -3,6 +3,37 @@
 <head>
 <title>Arts and Crafts</title>
 
+   <style>
+body {
+  margin: 0;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #014532;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #f4fc03;
+  color: black;
+}
+</style>
+
+
   
   <style>
 #myImg {
