--- a/paintings.html
+++ b/paintings.html
@@ -1985,8 +1985,8 @@ body {
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <div class="topnav">
-  <a class="active" href="index.html">Home</a>
-  <a href="paintings.html">Arts and Crafts</a>
+  <a href="index.html">Home</a>
+  <a class="active" href="paintings.html">Arts and Crafts</a>
   <a href="stories.html">Stories</a>
   <a href="codings.html">Codings</a>
 </div>
