--- a/paintings.html
+++ b/paintings.html
@@ -1984,12 +1984,14 @@ body {
   </div>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
+   
 <div class="topnav">
   <a href="index.html">Home</a>
   <a class="active" href="paintings.html">Arts and Crafts</a>
   <a href="stories.html">Stories</a>
   <a href="codings.html">Codings</a>
 </div>
+   
   
   <td id="layout-content">
 <table class="imgtable"><tr><td>
@@ -1997,7 +1999,7 @@ body {
 <td align="left">
 <p><br />
 
-<p style="font-size:50px;">Art and Craft Done By Me</p>
+<p style="font-size:50px;">Arts and Crafts done by Me</p>
 <br/></p>
 <p><i>* Click the picture to enlarge the picture, then click the X button beside it to shorten the picture.</i></p>
   </td></tr></table>
