--- a/codings.html
+++ b/codings.html
@@ -11,12 +11,15 @@
 </div>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
-<td id="layout-menu">
-<div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="paintings.html">Art and Craft</a></div>
-<div class="menu-item"><a href="stories.html">Stories</a></div>
-<div class="menu-item"><a href="codings.html" class="current">Codings</a></div>  
-</td>
+  
+<div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="paintings.html">Arts and Crafts</a>
+  <a href="stories.html">Stories</a>
+  <a href="codings.html">Codings</a>
+</div>
+
+ 
   
 <td id="layout-content">
 <table class="imgtable"><tr><td>
