--- a/codings.html
+++ b/codings.html
@@ -2,6 +2,35 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <style>
+body {
+  margin: 0;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #9d03fc;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #0394fc;
+  color: green;
+}
+</style>
 <title>Codings</title>
 </head>
 <body style="background-color:plum;">
