--- a/codings.html
+++ b/codings.html
@@ -56,18 +56,18 @@ body {
 <td align="left">
 <p><br />
   
-<p style="font-size:50px;">Codes Created By Me</p>
+<p style="font-size:50px;">Codes Created by Me</p>
 <br/></p>
   
   
 </td></tr></table>
   
   
-<h2><p style="color:MediumBlue;">Codes for watching and playing</p></h2>
+<h2><p style="color:MediumBlue;">Codes created by me</p></h2>
 <ul>
 <li><p><a href="https://scratch.mit.edu/search/projects?q=iamarinjay">Games,stories, and starters made by me in scratch</a></p>
 </li>
-<li><p><a href="https://arinjay-dasbhadra.github.io/index.html">My Website</a></p>
+<li><p><a href="https://arinjay-dasbhadra.github.io/index.html">My Website<br style="color: #03fca5"></a></p>
 </li>
 </ul>
   
