--- a/codings.html
+++ b/codings.html
@@ -67,7 +67,7 @@ body {
 <ul>
 <li><p><a href="https://scratch.mit.edu/search/projects?q=iamarinjay">Games,stories, and starters made by me in scratch</a></p>
 </li>
-<li><p><a href="https://arinjay-dasbhadra.github.io/index.html">My Website<br style="color: #03fca5">I</a></p>
+<li><p><a href="https://arinjay-dasbhadra.github.io/index.html">My Website<br style="color: #03fca5">(I spent more time on this than the ones above.)</a></p>
 </li>
 </ul>
   
