--- a/codings.html
+++ b/codings.html
@@ -9,7 +9,7 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #9d03fc;
+  background-color:Indigo;
 }
 
 .topnav a {
@@ -27,7 +27,7 @@ body {
 }
 
 .topnav a.active {
-  background-color: #0394fc;
+  background-color:Yellow;
   color: green;
 }
 </style>
