--- a/codings.html
+++ b/codings.html
@@ -27,8 +27,8 @@ body {
 }
 
 .topnav a.active {
-  background-color:Yellow;
-  color: green;
+  background-color:blue;
+  color: yellow;
 }
 </style>
 <title>Codings</title>
