--- a/codings.html
+++ b/codings.html
@@ -42,10 +42,10 @@ body {
 <tr valign="top">
   
 <div class="topnav">
-  <a class="active" href="index.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="paintings.html">Arts and Crafts</a>
   <a href="stories.html">Stories</a>
-  <a href="codings.html">Codings</a>
+  <a class="active" href="codings.html">Codings</a>
 </div>
 
  
