--- a/index.html
+++ b/index.html
@@ -259,14 +259,14 @@ body {
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="img_snow_wide.jpg" style="width:100%">
-  <div class="text">Caption Text</div>
+  <img src="Babuiscool.jpg" style="width:100%">
+  <div class="text">Me</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="img_nature_wide.jpg" style="width:100%">
-  <div class="text">Caption Two</div>
+  <img src="Babuiscool.jpg" style="width:100%">
+  <div class="text">Me and my family</div>
 </div>
 
 <div class="mySlides fade">
