--- a/index.html
+++ b/index.html
@@ -265,14 +265,14 @@ body {
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="Babuiscool.jpg" style="width:100%">
+  <img src="Me and my family.jpg" style="width:100%">
   <div class="text">Me and my family</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="img_mountains_wide.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+  <img src="WhatsApp Image 2023-03-25 at 12.59.23.jpeg" style="width:100%">
+  <div class="text">Me</div>
 </div>
 
 <a class="prev" onclick="plusSlides(-1)">❮</a>
