--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ img {vertical-align: middle;}
   margin-top: -22px;
   color: white;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 30px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -258,19 +258,31 @@ body {
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
+  <div class="numbertext">1 / 5</div>
   <img src="Babuiscool.jpg" style="width:100%">
   <div class="text">Me</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
+  <div class="numbertext">2 / 5</div>
   <img src="Me and my family.jpg" style="width:100%">
   <div class="text">Me and my family</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
+  <div class="numbertext">3 / 5</div>
+  <img src="WhatsApp Image 2023-03-25 at 12.59.23.jpeg" style="width:100%">
+  <div class="text">Me</div>
+</div>
+
+  <div class="mySlides fade">
+  <div class="numbertext">3 / 5</div>
+  <img src="WhatsApp Image 2023-03-25 at 12.59.23.jpeg" style="width:50%">
+  <div class="text">Me</div>
+</div>
+
+  <div class="mySlides fade">
+  <div class="numbertext">3 / 5</div>
   <img src="WhatsApp Image 2023-03-25 at 12.59.23.jpeg" style="width:100%">
   <div class="text">Me</div>
 </div>
@@ -285,6 +297,8 @@ body {
   <span class="dot" onclick="currentSlide(1)"></span> 
   <span class="dot" onclick="currentSlide(2)"></span> 
   <span class="dot" onclick="currentSlide(3)"></span> 
+    <span class="dot" onclick="currentSlide(4)"></span>
+    <span class="dot" onclick="currentSlide(5)"></span>
 </div>
 
 <script>
