--- a/index.html
+++ b/index.html
@@ -277,14 +277,14 @@ body {
 
   <div class="mySlides fade">
   <div class="numbertext">3 / 5</div>
-  <img src="WhatsApp Image 2023-03-25 at 12.59.23.jpeg" style="width:50%">
-  <div class="text">Me</div>
+  <img src="uniform.jpg" style="width:50%">
+  <div class="text">Myself in uniform</div>
 </div>
 
   <div class="mySlides fade">
   <div class="numbertext">3 / 5</div>
-  <img src="WhatsApp Image 2023-03-25 at 12.59.23.jpeg" style="width:100%">
-  <div class="text">Me</div>
+  <img src="me and sister.jpg" style="width:100%">
+  <div class="text">My sister and me</div>
 </div>
 
 <a class="prev" onclick="plusSlides(-1)">❮</a>
