--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ img {vertical-align: middle;}
   width: auto;
   padding: 16px;
   margin-top: -22px;
-  color: white;
+  color: Orange;
   font-weight: bold;
   font-size: 30px;
   transition: 0.6s ease;
@@ -49,8 +49,8 @@ img {vertical-align: middle;}
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
+  color: orange;
+  font-size: 40px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
@@ -60,8 +60,8 @@ img {vertical-align: middle;}
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
+  color: orange;
+  font-size: 30px;
   padding: 8px 12px;
   position: absolute;
   top: 0;
