--- a/index.html
+++ b/index.html
@@ -258,35 +258,53 @@ body {
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 5</div>
-  <img src="Babuiscool.jpg" style="width:70%">
-  <div class="text">Me</div>
+  <div class="numbertext">1 / 8</div>
+  <img src="1.jfif" style="width:100%">
+  <div class="text">My family and me</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 5</div>
-  <img src="Me and my family.jpg" style="width:100%">
-  <div class="text">Me and my family</div>
+  <div class="numbertext">2 / 8</div>
+  <img src="2.jfif" style="width:100%">
+  <div class="text">My signature</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 5</div>
-  <img src="WhatsApp Image 2023-03-25 at 12.59.23.jpeg" style="width:50%">
+  <div class="numbertext">3 / 8</div>
+  <img src="3.jfif" style="width:100%">
+  <div class="text">First Picture: My mother, my sister and me<br>
+  Second picture: My sister and me</div>
+</div>
+
+  <div class="mySlides fade">
+  <div class="numbertext">4 / 8</div>
+  <img src="4.jfif" style="width:100%">
+  <div class="text">All of the pictures: Me</div>
+</div>
+
+  <div class="mySlides fade">
+  <div class="numbertext">5 / 8</div>
+  <img src="5.jfif" style="width:100%">
   <div class="text">Me</div>
 </div>
 
   <div class="mySlides fade">
-  <div class="numbertext">4 / 5</div>
-  <img src="uniform.jpg" style="width:50%">
-  <div class="text">Myself in uniform</div>
+  <div class="numbertext">6 / 8</div>
+  <img src="6.jfif" style="width:100%">
+  <div class="text">My friends and me (We are in school uniform)</div>
+</div>
+
+   <div class="mySlides fade">
+  <div class="numbertext">7 / 8</div>
+  <img src="7.jfif" style="width:100%">
+  <div class="text">My father, my sister and me</div>
 </div>
 
   <div class="mySlides fade">
-  <div class="numbertext">5 / 5</div>
-  <img src="me and sister.jpg" style="width:50%">
-  <div class="text">My sister and me</div>
+  <div class="numbertext">8 / 8</div>
+  <img src="8.jfif" style="width:100%">
+  <div class="text">My family and me</div>
 </div>
-
 <a class="prev" onclick="plusSlides(-1)">❮</a>
 <a class="next" onclick="plusSlides(1)">❯</a>
 
@@ -299,6 +317,9 @@ body {
   <span class="dot" onclick="currentSlide(3)"></span> 
     <span class="dot" onclick="currentSlide(4)"></span>
     <span class="dot" onclick="currentSlide(5)"></span>
+  <span class="dot" onclick="currentSlide(6)"></span> 
+    <span class="dot" onclick="currentSlide(7)"></span>
+    <span class="dot" onclick="currentSlide(8)"></span>
 </div>
 
 <script>
