--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="manifest" href="/site.webmanifest">
 <title>Arinjay Dasbhadra</title>
-    <<link rel="icon" type="image/x-icon" href="favicon.ico" >
+    <link rel="icon" type="image/x-icon" href="favicon.ico" >
 
 
   <style>
