--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="manifest" href="/site.webmanifest">
-<title>Arinjay Dasbhadra.</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+<title>Arinjay Dasbhadra</title>
+    <link rel="icon" src="favicon.ico" type="image/x-icon">
 
 
   <style>
