--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@ body {
   <a href="paintings.html">Arts and Crafts</a>
   <a href="stories.html">Stories</a>
   <a href="codings.html">Codings</a>
+   <a href="my Game.html">Game</a>
 </div>
 
  
