--- a/my Game.html
+++ b/my Game.html
@@ -10,6 +10,17 @@ canvas {
 </style>
 </head>
 <body onload="startGame()">
+    <table summary="Table for page layout." id="tlayout">
+<tr valign="top">
+  
+<div class="topnav">
+  <a href="index.html">Home</a>
+  <a href="paintings.html">Arts and Crafts</a>
+  <a href="stories.html">Stories</a>
+  <a href="codings.html">Codings</a>
+   <a class="active" href="my Game.html">Game</a>
+</div>
+
 <script>
 
 var myGamePiece;
