--- a/my Game.html
+++ b/my Game.html
@@ -8,7 +8,14 @@ canvas {
     background-color: #f1f1f1;
 }
 </style>
-</head>
+</head><body><div class="topnav">
+  <a href="index.html">Home</a>
+  <a href="paintings.html">Arts and Crafts</a>
+  <a href="stories.html">Stories</a>
+  <a href="codings.html">Codings</a>
+   <a class="active" href="my Game.html">Game</a>
+</div>
+
 <body onload="startGame()">
     <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
@@ -145,4 +152,6 @@ function accelerate(n) {
 <p>Use the ACCELERATE button to stay in the air</p>
 <p>How long can you stay alive?</p>
 </body>
+    </body>
+
 </html>
