--- a/my Game.html
+++ b/my Game.html
@@ -1,6 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+body {
+  margin: 0;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: blue;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: red;
+  color: white;
+}
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <style>
 canvas {
