--- a/index.html
+++ b/index.html
@@ -369,9 +369,9 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
   House no :39, Grand Village, Mattumanda, Palakkad, Kerala, India, Indian Subcontinent, Asia , Earth, Solarsystem, Milkyway, Local Group of Galaxies, Universe, etc...<br>
 Pin Code: 678005</p>
 </li>
-<li><p>I am 12+ years old (My date of birth is 21/9/2011)</p>
+<li><p>I am 13+ years old (My date of birth is 21/9/2011)</p>
 </li>
-<li><p>I study in a school called PM SHRI Kendriya Vidyalaya Kanjikode in class 7C</p>
+<li><p>I study in a school called PM SHRI Kendriya Vidyalaya Kanjikode in class 8C</p>
 </li>
 <li><p>My parents work in an institute called Indian Institute Of India Palakkad</p>
 </li>
@@ -387,6 +387,8 @@ Pin Code: 678005</p>
 <li><p>Pasta is my favourite food</p>
 </li>
 <li><p>Ford Raptor, and Buggati Bloide are my favourite cars</p>
+</li>
+  <li><p>Rick Riordan is my favourite author</p>
 </li>
 <li><p>I want to be an car designer, manufacturer, and seller or I want to become an author and additionally a toy and book collector when I grow up.(I will probably decide later on) (My favourite job)</p>
 </li>
