--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="manifest" href="/site.webmanifest">
 <title>Arinjay Dasbhadra</title>
-    <link rel="icon" src="favicon.ico" type="image/x-icon">
+    <link rel="icon" src="Capture.ico" type="image/x-icon">
 
 
   <style>
