--- a/index.html
+++ b/index.html
@@ -262,53 +262,61 @@ body {
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 8</div>
+  <div class="numbertext">1 / 9</div>
+  <img src="1.jfif" style="width:100%">
+  <div class="text">My Name</div>
+</div>
+  
+  <div class="mySlides fade">
+  <div class="numbertext">2 / 9</div>
   <img src="1.jfif" style="width:100%">
   <div class="text">My family and me</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 8</div>
+  <div class="numbertext">3 / 9</div>
   <img src="2.jfif" style="width:100%">
   <div class="text">My signature</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 8</div>
+  <div class="numbertext">4 / 9</div>
   <img src="3.jfif" style="width:100%">
   <div class="text">First Picture: My mother, my sister and me<br>
   Second picture: My sister and me</div>
 </div>
 
-  <div class="mySlides fade">
-  <div class="numbertext">4 / 8</div>
-  <img src="4.jfif" style="width:100%">
-  <div class="text">All of the pictures: Me</div>
-</div>
-
-  <div class="mySlides fade">
-  <div class="numbertext">5 / 8</div>
+   <div class="mySlides fade">
+  <div class="numbertext">5 / 9</div>
   <img src="5.jfif" style="width:100%">
   <div class="text">Me</div>
 </div>
 
   <div class="mySlides fade">
-  <div class="numbertext">6 / 8</div>
+  <div class="numbertext">6 / 9</div>
   <img src="6.jfif" style="width:100%">
   <div class="text">My friends and me (We are in school uniform)</div>
 </div>
 
    <div class="mySlides fade">
-  <div class="numbertext">7 / 8</div>
+  <div class="numbertext">7 / 9</div>
   <img src="7.jfif" style="width:100%">
   <div class="text">My father, my sister and me</div>
 </div>
 
   <div class="mySlides fade">
-  <div class="numbertext">8 / 8</div>
+  <div class="numbertext">8 / 9</div>
   <img src="8.jfif" style="width:100%">
   <div class="text">My family and me</div>
 </div>
+
+   <div class="mySlides fade">
+  <div class="numbertext">9 / 9</div>
+  <img src="4.jfif" style="width:100%">
+  <div class="text">All of the pictures: Me</div>
+</div>
+
+
 <a class="prev" onclick="plusSlides(-1)">❮</a>
 <a class="next" onclick="plusSlides(1)">❯</a>
 
