--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ body {
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 9</div>
-  <img src="1.jfif" style="width:100%">
+  <img src="67e8f1c30f9a41b36801a521.png" style="width:100%">
   <div class="text">My Name</div>
 </div>
   
